tests/NormalTests/paczka1/fuzzy1/71779860.err
Error in line 16: Hb0cfnnu S160 ,
Error in line 11: Hb0cfnnu A784 39,0
Error in line 20: 3tZVSySuQeB S456 66,1
Error in line 19: Hb0cfnnu S160 184,1
Error in line 22: Hb0cfnnu A784 90,8
Error in line 27: Hb0cfnnu A18 100,3
